--- a/style.css
+++ b/style.css
@@ -2,15 +2,60 @@ body,
 main {
   background-color: hsl(30, 54%, 90%);
   font-family: Outfit, sans-serif;
+  color: hsl(30, 10%, 34%);
+  font-weight: 400;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
+  padding-top: 72px;
+}
+
+h1,
+h2 {
+  font-family: Young Serif;
+  font-weight: 400;
+}
+
+h1 {
+  color: hsl(24, 5%, 18%);
+}
+h2 {
+  color: hsl(14, 45%, 36%);
+}
+
+li {
+  padding-left: 32px;
+  margin-bottom: 12px;
+}
+
+li:last-child {
+  margin-bottom: 0;
 }
 
 .main-card {
   background-color: white;
   border-radius: 24px;
-  padding: 24px;
+  padding: 42px;
   max-width: 60%;
+}
+
+.main-card img {
+  width: 100%;
+  border-radius: 16px;
+}
+
+.prep {
+  background-color: hsl(330, 100%, 98%);
+  padding: 24px;
+  border-radius: 16px;
+}
+
+.prep h3 {
+  margin: 0;
+  color: hsl(332, 51%, 32%);
+}
+
+.prep ul {
+  margin-bottom: 8px;
 }
