--- a/style.css
+++ b/style.css
@@ -5,10 +5,8 @@ main {
   color: hsl(30, 10%, 34%);
   font-weight: 400;
   display: flex;
-  align-items: center;
   justify-content: center;
-  height: 100vh;
-  padding-top: 72px;
+  padding: 72px 0px;
 }
 
 h1,
@@ -24,13 +22,29 @@ h2 {
   color: hsl(14, 45%, 36%);
 }
 
+hr {
+  border-color: hsl(30, 54%, 90%, 0.15);
+}
+
 li {
   padding-left: 32px;
   margin-bottom: 12px;
 }
 
+li::marker {
+  color: hsl(14, 45%, 36%);
+}
+
+li > b {
+  font-weight: 600;
+}
+
 li:last-child {
   margin-bottom: 0;
+}
+
+ol li::marker {
+  font-weight: 600;
 }
 
 .main-card {
@@ -48,6 +62,7 @@ li:last-child {
 .prep {
   background-color: hsl(330, 100%, 98%);
   padding: 24px;
+  margin: 32px 0;
   border-radius: 16px;
 }
 
@@ -58,4 +73,24 @@ li:last-child {
 
 .prep ul {
   margin-bottom: 8px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+tr:not(:last-child) {
+  border-bottom: 1px solid hsl(30, 54%, 90%);
+}
+
+tr td:nth-child(2) {
+  font-weight: 600;
+  color: hsl(14, 45%, 36%);
+  padding-left: 0;
+}
+
+td {
+  width: 50%;
+  padding: 12px 52px;
 }
